# openai-realtime-proxy

./: Cargo.toml  config.toml.example
src/: lib.rs  main.rs
